<resources>
    <string name="app_name">Todo Notifications (Sticky)</string>

    <string name="create_note_title">Create</string>
    <string name="create_title">Title</string>
    <string name="create_content">Content</string>
    <string name="create_notif">Show notification</string>
    <string name="create_delete">Delete</string>
    <string name="create_validate">Save</string>
    <string name="create_title_empty">At least, type a title</string>

    <string name="action_about">About</string>
    <string name="action_edit">Edit</string>

    <string name="useless">Low priority</string>
    <string name="normal">Normal priority</string>
    <string name="important">High priority</string>
    <string name="ultra">Ultra priority</string>

    <string-array name="spinner_data">
        <item>All notifications</item>
        <item>@string/ultra</item>
        <item>@string/important</item>
        <item>@string/normal</item>
        <item>@string/useless</item>
    </string-array>

    <string name="note_deleted">Notification deleted</string>
    <string name="note_deleted_error">Error while deleting notification</string>
    <string name="note_retrive_error">Error while retrieving notification</string>
    <string name="note_saved">Notification saved</string>
    <string name="note_saved_error">Error while saving notification</string>

    <string name="about_author">Todo Notifications (Sticky) by Quentin KLEIN</string>
    <string name="about_version">Version : </string>
    <string name="about_explain">If you like the app, please mark it and comment on the store. If you have any question/remark, feel free to send me a mail</string>
    <string name="about_explain_rate">Mark the application ;)</string>
    <string name="about_explain_complain">A question/remark ?</string>
    <string name="about_thanks">Special thanks, I use them</string>
    <string name="about_thanks_androidannotations">androidannotations.org</string>
    <string name="about_thanks_ormlite">ormlite.com</string>
    <string name="about_thanks_cards">github.com/makovkastar/FloatingActionButton</string>
    <string name="about_graphics">Icons &amp; Pictures</string>
    <string name="about_graphics_flat">flaticons.net</string>

    <!-- compain -->
    <string name="complain_choose">Send a remark</string>
    <string name="complain_subject">Remark on the app</string>
    <string name="complain_message">Remarks :\n\n\n(Optional) My mail : </string>
    <string name="complain_error">Error while choosing mail app :/</string>

    <!-- Plurals -->
    <plurals name="grouped_notification_title">
        <item quantity="one">1 todo notification</item>
        <item quantity="other">%d todo notifications</item>
    </plurals>

    <!-- Settings -->
    <string name="settings_notifications_title">Notifications</string>
    <string name="settings_notifications_switch">Group notifications by priority</string>
    <string name="settings_notifications_explain">Group notifications with the same priority as one notification in the notification bar</string>


    <string name="settings_filter_title">Priority filter</string>
    <string name="settings_filter_switch">Show the filter</string>
    <string name="settings_filter_explain">Show the priority filter in main screen if activated</string>

</resources>
